# TIAGo-hamr-simulation

./: .gitignore  README.md
models/: control_lab_doorways.dae  control_lab_onshape.dae
models/control_lab/: model.config  model.sdf
models/reward_zone/: model.config  model.sdf
plugins/: CMakeLists.txt  add_reward_zone.cc  add_reward_zone.hh
tiago_sim_guide/: bib.bib  makefile  preamble.tex  tiago_sim_guide.tex
workspace/src/: .rosinstall  setup.sh
workspace/src/hello_world/: CMakeLists.txt  package.xml
workspace/src/hello_world/src/: hello_world_node.cpp
worlds/: control_lab.world  control_lab_v2.world  control_lab_world
worlds/control_lab/: model.config  model.sdf
